{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 92,
  "lineage": "3c7ab928-c2da-4178-1c33-6911f298df01",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05995dee5291e1df0",
            "domain": "vpc",
            "id": "eipalloc-05995dee5291e1df0",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-175-120.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.175.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Test-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:internet-gateway/igw-0fc304abaaa4770ea",
            "id": "igw-0fc304abaaa4770ea",
            "owner_id": "029499999627",
            "tags": {
              "Name": "Test-igw"
            },
            "tags_all": {
              "Name": "Test-igw"
            },
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "T-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05995dee5291e1df0",
            "connectivity_type": "public",
            "id": "nat-0f731e8017a84cd4c",
            "network_interface_id": "eni-0362629a32191653a",
            "private_ip": "10.0.1.69",
            "public_ip": "18.135.175.120",
            "subnet_id": "subnet-060e1392311336c1c",
            "tags": {
              "Name": "T-nat-gateway"
            },
            "tags_all": {
              "Name": "T-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.eip-nat-gateway-1",
            "aws_subnet.Test-public-sub1",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Test-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc304abaaa4770ea",
            "id": "r-rtb-03b7acad8ca7cf9361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03b7acad8ca7cf936",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Test-igw",
            "aws_route_table.Test-pub-route-table",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Test-priv-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:route-table/rtb-0dc73523f702fb174",
            "id": "rtb-0dc73523f702fb174",
            "owner_id": "029499999627",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Test-priv-route-table"
            },
            "tags_all": {
              "Name": "Test-priv-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Test-pub-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:route-table/rtb-03b7acad8ca7cf936",
            "id": "rtb-03b7acad8ca7cf936",
            "owner_id": "029499999627",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Test-pub-route-table"
            },
            "tags_all": {
              "Name": "Test-pub-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Test-priv-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044b00cb6c0af9b6c",
            "route_table_id": "rtb-0dc73523f702fb174",
            "subnet_id": "subnet-0d4a4a98dec42d20f"
          },
          "dependencies": [
            "aws_route_table.Test-priv-route-table",
            "aws_subnet.Test-priv-sub1",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Test-priv-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054220cdbf5d18e8c",
            "route_table_id": "rtb-0dc73523f702fb174",
            "subnet_id": "subnet-0986e9656247bd88c"
          },
          "dependencies": [
            "aws_route_table.Test-priv-route-table",
            "aws_subnet.Test-priv-sub2",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Test-pub-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077758d719ad686e0",
            "route_table_id": "rtb-03b7acad8ca7cf936",
            "subnet_id": "subnet-060e1392311336c1c"
          },
          "dependencies": [
            "aws_route_table.Test-pub-route-table",
            "aws_subnet.Test-public-sub1",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Test-pub-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06616770d929ea54d",
            "route_table_id": "rtb-03b7acad8ca7cf936",
            "subnet_id": "subnet-09e8fc57eb4f3d8b9"
          },
          "dependencies": [
            "aws_route_table.Test-pub-route-table",
            "aws_subnet.Test-public-sub2",
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:subnet/subnet-0d4a4a98dec42d20f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4a4a98dec42d20f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029499999627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-priv-sub1"
            },
            "tags_all": {
              "Name": "Test-priv-sub1"
            },
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:subnet/subnet-0986e9656247bd88c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0986e9656247bd88c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029499999627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-priv-sub2"
            },
            "tags_all": {
              "Name": "Test-priv-sub2"
            },
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-public-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:subnet/subnet-060e1392311336c1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060e1392311336c1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029499999627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-public-sub1"
            },
            "tags_all": {
              "Name": "Test-public-sub1"
            },
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Test-public-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:subnet/subnet-09e8fc57eb4f3d8b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e8fc57eb4f3d8b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029499999627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Test-public-sub2"
            },
            "tags_all": {
              "Name": "Test-public-sub2"
            },
            "vpc_id": "vpc-062e00d891a16eb47"
          },
          "dependencies": [
            "aws_vpc.Prod-rock-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Prod-rock-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:029499999627:vpc/vpc-062e00d891a16eb47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8e6ee7d13b287f4",
            "default_route_table_id": "rtb-06615bff4751c0b7b",
            "default_security_group_id": "sg-038d56cc31d26bf61",
            "dhcp_options_id": "dopt-0aa2557202825fd21",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-062e00d891a16eb47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06615bff4751c0b7b",
            "owner_id": "029499999627",
            "tags": {
              "Name": "Prod-rock-vpc"
            },
            "tags_all": {
              "Name": "Prod-rock-vpc"
            }
          }
        }
      ]
    }
  ]
}